# schema

./: .gitattributes  .gitignore  404.html  CNAME  CODEOWNERS  CONTRIBUTING.md  GLOSSARY.md  LICENSE  Makefile  PYDANTIC_GUIDE.md  PYDANTIC_GUIDE_MKDOCS.md  README.md  README.pydantic.md  SCHEMA_CONVENTIONS.md  TEMP_FILE_DO_NOT_MERGE  convert_to_json_for_documentation.py  defs.yaml  documentation_config.yaml  gen_doc.sh  index.html  opensearch.xml  overture-taxonomy-feb.csv  pyproject.toml  schema.yaml  sitemap.xml  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agenda-minutes-template.md
.github/PULL_REQUEST_TEMPLATE/: documentation_update.md
.github/workflows/: check-python-code.yaml  check-python-package-versions.yaml  compute-versions-dry-run.yaml  copy-latest-docs-to-staging.yaml  copy-pr-docs-to-staging.yaml  enforce-change-type-label.yaml  github-actions-build-documentation.yml  github-actions-check-pydantic.yaml  github-actions-copy-latest-docs-to-staging.yaml  github-actions-copy-pr-docs-to-staging.yaml  github-actions-enforce-change-type-label.yaml  github-actions-publish-docs-gh-pages.yaml  github-actions-test-schema.yaml  github-actions-test-schema.yml  p1-post-merge-rebase.yaml  p1-pr-compat-check.yaml  p1-pr-target-check.yaml  pr-advisory.yaml  publish-docs-gh-pages.yaml  publish-python-packages.yaml  rebase-vnext.yaml  release-trigger.yaml  require-changelog-fragment.yaml  reusable-check-python-package-versions.yaml  reusable-get-code-artifact-index-url.yaml  schema-pr-preview-cleanup.yml  schema-pr-preview.yml  test-schema.yaml  vnext-compat.yaml
Admin/: OvertureAdminSchema.html  OvertureAdminSchema.yaml  OvertureSchema.cs
addresses/: address.yaml
admins/: administrative_boundary.yaml
assets/css/: styles.19469a5a.css  styles.463bcbae.css  styles.867c1d2b.css  styles.9473ce83.css  styles.9b4457e9.css
assets/js/: 0a8f18ab.16d89f13.js  0a8f18ab.217acdec.js  0a8f18ab.2530144a.js  0a8f18ab.41f33498.js  0a8f18ab.48a21415.js  0a8f18ab.9bb986f3.js  11427a03.0c7d2661.js  11427a03.95777758.js  11e85799.5e852d8a.js  11e85799.e215f54e.js  11e85799.fcf05cb3.js  14eb3368.305ebeb8.js  14eb3368.5375cd77.js  14eb3368.662241b0.js  16.3cfbce4b.js  16.87962573.js  16.87ded451.js  16.8fb7fb98.js  16.f02ad944.js  16ec7a70.d4abcb8b.js  17896441.0a5cd705.js  17896441.0b830d9e.js  17896441.3603910a.js  17896441.bb285b96.js  17896441.db0dcf35.js  17896441.e42e7186.js  1a4e3797.55ecff9a.js  1be78505.20fbcd53.js  20acdc64.456ba225.js  20acdc64.61c18df6.js  20acdc64.db04365e.js  20acdc64.e6942ac3.js  237.56032340.js  237.72d385d4.js  24e43610.00c0d317.js  24e43610.5ed40e91.js  24e43610.c01207ba.js  24e43610.d03d1906.js  24e43610.d730c8a5.js  24e43610.d7ece17f.js  (+264 more)
base/: infrastructure.yaml  land_cover.yaml  land_use.yaml  water.yaml
buildings/: building_part.yaml  defs.yaml  overture_classes_mapping.json
counterexamples/: bad-entityId.json  bad-theme.json  bad-yaml-timestamp.yaml  unrecognized-property.json
counterexamples/addresses/: bad-address-empty-levels.yaml  bad-address-too-many-levels.yaml  bad-address-white-space.yaml  bad-postcode-city-division-id.yaml  bad-postcode-geometry-coordinates.yaml  bad-postcode-name-format.yaml  bad-postcode-subtype.yaml
counterexamples/admins/: admin-incorrect-language.json  admin-lower-admin-level-no-context.json  admin-lower-adminLevel-no-context.json  admin-no-names.json  admin-no-subType.json
counterexamples/buildings/: bad-class.json  bad-common-language.yaml  bad-confidence-in-source.yaml  bad-floors-underground.yaml  bad-geometry-type.json  bad-license.yaml  bad-name-local-not-first-language.yaml  bad-name-local-not-first-locale.yaml  bad-name-no-language.yaml  bad-name-no-locale.yaml  bad-sources-empty-provider.yaml  bad-time.yaml  bad-type.json  namesv2-local-language.yaml  negative-height.json  negative-num-floors.json  no-primary-names.yaml
counterexamples/places/: bad-address-invalid-property.yaml  bad-address-missing-required-property.yaml  bad-basic-category.yaml  bad-categories-missing-main.yaml  bad-categories-missing-primary.yaml  bad-categories-value.yaml  bad-empty-emails.yaml  bad-empty-phones.yaml  bad-empty-socials.yaml  bad-empty-websites.yaml  bad-geometry.yaml  bad-operating-status.yaml  bad-taxonomy-missing-hierarchy.yaml  place.yaml
divisions/: division.yaml  division_area.yaml  division_boundary.yaml
docs/: 404.html  README.md  build_docs.sh  editor.worker.js  index.html  json.worker.js  sitemap.xml  versioning.md
docs/auto_gen/: connector.html  defs.html  footprint.html  schema.html  segment.html
docs/components/: taxonomyBrowser.js
documentation_website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json
docusaurus/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: empire-state-building.json  seattle-town-hall.json
gers/: README.md  index.html  test.sh
gers/examples/python/: HATCHLING.md  IMPLEMENTATION_SUMMARY.md  MATCH_LINESTRINGS.md  MATCH_TRACES.md  README.md  constants.py  convert_gpx.py  download_osm_traces.py  match_classes.py  match_generic.py  match_linestrings.ipynb  match_nearest.ipynb  match_traces.ipynb  match_traces.py  pyproject.toml  requirements.txt  route_utils.py  sidecar_match.py  utils.py  validate_package.py
gers/examples/python/data/: macon-line-segments.csv  macon-manual-traces.geojson  macon-manual-traces.labeled.txt  macon-manual-traces.labeled.txt.actual.txt  macon-osm-traces-combined.geojson  macon-points.csv
gers/examples/python/overture_gers_examples/: __init__.py  match_classes.py  match_traces.py  route_utils.py  utils.py
gers/examples/python/tests/: match_generic_test.py  match_traces_test.py  test_setup.py  utils_test.py
places/: Place.puml  README.md  overture_categories.csv  place.yaml
reference/: index.html
schema/: defs.yaml  schema.yaml
search/: index.html
themes/: index.html
transportation/: connector.yaml  schema.json  segment.yaml  swag.json  test.sh
utils/: deploy.sh  sync_yaml_and_json_examples.py
(+1342 files in other folders)
