# uv workspace configuration

[project]
license = "MIT"
name = "overture-schema-workspace"
requires-python = ">=3.10"
version = "0.0.0"

[tool.uv]
exclude-newer = "1 week"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade,
    "ANN", # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["ANN401"]
"__init__.py" = ["F401"]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
files = "packages/**/*.py"
namespace_packages = true
plugins = ["pydantic.mypy"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pdoc>=15.0.4",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
markers = [
    "baseline: golden file baseline tests",
]
pythonpath = [
    "packages/overture-schema-addresses-theme/tests",
    "packages/overture-schema-annex/tests",
    "packages/overture-schema-base-theme/tests",
    "packages/overture-schema-buildings-theme/tests",
    "packages/overture-schema-cli/tests",
    "packages/overture-schema-codegen/tests",
    "packages/overture-schema-common/tests",
    "packages/overture-schema-divisions-theme/tests",
    "packages/overture-schema-places-theme/tests",
    "packages/overture-schema-system/tests",
    "packages/overture-schema-transportation-theme/tests",
    "packages/overture-schema/tests",
]
verbosity_subtests = 0

# Shared changelog (towncrier) config for every package under packages/*.
# Build a package's notes from the repo root:
#   uvx towncrier build --config pyproject.toml --dir packages/<package> --version <major>.<minor>.0
# A package may override these categories by adding its own [tool.towncrier]
# block and building from that package directory (towncrier replaces, not merges).
[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/OvertureMaps/schema/issues/{issue})"
ignore = ["README.md"]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true